Add Version category in SettingActivity.

--- a/app/src/main/res/xml/settings_preference.xml
+++ b/app/src/main/res/xml/settings_preference.xml
@@ -30,6 +30,13 @@
         </PreferenceScreen>
     </PreferenceCategory>
     <PreferenceCategory
+        android:title="버전 정보">
+        <PreferenceScreen
+            android:key="version_info"
+            android:title="@string/app_name">
+        </PreferenceScreen>
+    </PreferenceCategory>
+    <PreferenceCategory
         android:title="라이센스">
         <PreferenceScreen
             android:key="OpenSources"
