--- a/app/src/main/res/layout-normal/activity_web_view.xml
+++ b/app/src/main/res/layout-normal/activity_web_view.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="club.rodong.playerforstream.activity.WebViewActivity">
+    tools:context="club.rodong.slitch.activity.WebViewActivity">
 
     <WebView
         android:id="@+id/Klogin"
